--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <body>
 
 <h1>Ez itt egy hed</h1>
-<p>Hamarosan nyit!</p>
-
+<p>Hamarosan nyitunk</p>
+<p>Á, csak vicceltem</p>
+  
+  
 </body>
 </html>
